
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center_horizontal"
            android:text="@string/change_password"
            android:gravity="center"
            style="@style/dialogTitleTextStyle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blue"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/enter_old_password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_border_edittext"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:id="@+id/edit_old_pass">
            <requestFocus />
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/enter_new_password"
            android:background="@drawable/rounded_border_edittext"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:id="@+id/edit_new_pass">
            <requestFocus />
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:background="@drawable/rounded_border_edittext"
            android:layout_gravity="center"
            android:padding="15dp"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:id="@+id/edit_confirm_pass">
            <requestFocus />
        </EditText>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:id="@+id/loader" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="0.98"
            style="@style/normalButtonStyle"
            android:layout_width="0dp"
            android:text="Cancel"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:id="@+id/button_cancel"/>
        <View
            android:layout_width="0dp"
            android:layout_weight=".03"
            android:layout_height="50dp"/>
        <Button
            style="@style/normalButtonStyle"
            android:layout_weight="0.98"
            android:layout_width="0dp"
            android:text="Done"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:id="@+id/button_submit"/>

    </LinearLayout>
</LinearLayout>
