<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1.0">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/round_logo"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:layout_margin="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MainHeaderText"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MainDescription"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1.0">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="@string/verification_code"
                android:background="@drawable/rounded_border_edittext"
                android:layout_gravity="center"
                android:singleLine="true"
                android:padding="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/edit_verification_code">
                <requestFocus />
            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="@string/password"
                android:background="@drawable/rounded_border_edittext"
                android:layout_gravity="center"
                android:padding="15dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/edit_pass">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:background="@drawable/rounded_border_edittext"
                android:layout_gravity="center"
                android:padding="15dp"
                android:inputType="textPassword"
                android:singleLine="true"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/edit_confirm_pass">

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/linear_otp_not_received">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Don't recieved code?"
                        android:padding="5dp"
                        android:textColor="#888"
                        android:layout_marginTop="10dp"
                        android:id="@+id/text_otp_not_received"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="RESEND"
                        android:padding="2dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textColor="#333"
                        android:id="@+id/text_code_resend"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:id="@+id/linear_wait_for">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Wait For"
                        android:padding="5dp"
                        android:textColor="#888"
                        android:layout_marginTop="10dp"
                        android:id="@+id/text_otp_not_receive"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="30"
                        android:padding="2dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textColor="#333"
                        android:id="@+id/text_timer"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/register"
        android:id="@+id/button_register" />
</RelativeLayout>